# Logician-lib

./: .gitignore  Build Instructions.txt  Changelog.txt  FOSS License Exception.txt  Licensing.txt  Logician-Lib.sln  Logician_Developers_Guide.txt  README.md  rules_schema.xsd
src/install scripts/: DecisionLogic_Installer.nsi  Logician_Latest_Installer.nsi  Logician_v1_Installer.nsi  Logician_v2_Installer.nsi  Logician_v3_Installer.nsi
src/trunk/EDSEngine/: Bimapper.cpp  Bimapper.h  CMakeLists.txt  Decode.cpp  Decode.h  EDSEngine.cbp  EDSEngine.cpp  EDSEngine.pro  EDSEngine.project  EDSEngine.workspace  EDSEngine2013.vcxproj  IKnowledgeBase.h  KnowledgeBase.cpp  KnowledgeBase.h  Makefile  Numerics.h  ReadMe.txt  RuleCell.h  RuleTable.cpp  RuleTable.h  TableSet.cpp  TableSet.h  XMLWrapper.h  ashost.cpp  ashost.h  stdafx.cpp  stdafx.h  utilities.cpp  utilities.h
src/trunk/EDSEngineNET/: AssemblyInfo.cpp  EDSEngine.cpp  EDSEngine.h  EDSEngineNET2013.vcxproj  Marshal.cpp  Marshal.h  ReadMe.txt  Stdafx.cpp  Stdafx.h  app.rc
src/trunk/ROMNET/: AssemblyInfo.cpp  Marshal.cpp  Marshal.h  ROMNET.cpp  ROMNET.h  ROMNET2013.vcxproj  ReadMe.txt  Stdafx.cpp
src/trunk/RelationalObjectModel/: CMakeLists.txt  LinearEngine.cpp  LinearEngine.h  Makefile  ROM.cpp  ROMDictionary.cpp  ROMDictionary.h  ROMDictionaryAttribute.h  ROMInterfaces.h  ROMNode.cpp  ROMNode.h  Relational Object Model 2013.vcxproj  RelationalObjectModel.cbp  RelationalObjectModel.pro  stdafx.cpp  stdafx.h  utilities.cpp  utilities.h
